<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/ic_menu_teachers"
            android:title="@string/menu_teachers" />
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_menu_students"
            android:title="@string/menu_students" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_course"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_menu_question"
            android:title="@string/menu_questions" />
        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/ic_menu_exam"
            android:title="@string/menu_exams" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_more"
            android:title="@string/menu_more" />
    </group>
</menu>