<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_grades"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/ic_menu_exam"
            android:title="@string/menu_exams" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_more"
            android:title="@string/menu_more" />
    </group>
</menu>