<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/header"
        style="@style/ActionItem"
        android:layout_marginTop="8dp"
        android:text="@string/str_grade_header"
        android:textStyle="bold"
        android:textColor="@color/black_light"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_grade_1"
        style="@style/ActionItem"
        android:layout_marginTop="8dp"
        android:text="@string/str_grade_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <View
        android:id="@+id/separator_1"
        style="@style/SeparateHorizontalView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grade_1" />

    <TextView
        android:id="@+id/txt_grade_2"
        style="@style/ActionItem"
        android:text="@string/str_grade_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_1" />

    <View
        android:id="@+id/separator_2"
        style="@style/SeparateHorizontalView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grade_2" />

    <TextView
        android:id="@+id/txt_grade_3"
        style="@style/ActionItem"
        android:text="@string/str_grade_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_2" />

    <View
        android:id="@+id/separator_3"
        style="@style/SeparateHorizontalView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grade_3" />

    <TextView
        android:id="@+id/txt_grade_4"
        style="@style/ActionItem"
        android:text="@string/str_grade_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_3" />
</androidx.constraintlayout.widget.ConstraintLayout>