<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <include android:id="@+id/app_bar_layout" layout="@layout/layout_app_bar"/>

    <ScrollView
        android:layout_below="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:text="@string/str_exam_list"
                android:textColor="@color/black_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_exams_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/str_empty_data"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExams"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/search_bar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                tools:itemCount="2"
                tools:listitem="@layout/item_exam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:text="@string/str_exams_solved_list"
                android:textColor="@color/black_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_exams_solved_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/str_empty_data"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExamsSolved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/search_bar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                tools:itemCount="2"
                tools:listitem="@layout/item_exam" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</RelativeLayout>